--- a/src/view/JPanelProduto.form
+++ b/src/view/JPanelProduto.form
@@ -141,6 +141,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableProdutosMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
